Text size and spacing: Fix about section text size Fix commercial use section text size Fix spacing of community card

--- a/_sass/classes.sass
+++ b/_sass/classes.sass
@@ -188,15 +188,11 @@
 // about ====================================
 .about
   color: $text-color
-  p
-    padding-right: 20%
-    line-height: 2rem
 
   .slider
     outline: none  !important
 
   .carousel
-    // background-color: $bg-color-light-green
     padding-top: 1%
     overflow: hidden
     width: 100%
@@ -220,7 +216,7 @@
   background-repeat: no-repeat
   mix-blend-mode: multiply
   z-index: -2
-  margin-bottom: 4%
+  margin-bottom: 2%
 
 .extensions
   .content
